# BOT_SSlime

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  release-url  showcase.yaml
.github/actions/cache_rust/: action.yaml
.github/workflows/: ci.yaml  push-to-gitea.yaml
mysql/init/: schema.sql
src/: api.rs  cron.rs  db.rs  events.rs  handler.rs  main.rs  messages.rs  model.rs  utils.rs
src/model/: api.rs  db.rs
